--- a/index.html
+++ b/index.html
@@ -10,26 +10,13 @@
     <title>Eshop</title>
 </head>
 <body>
-<header>
-    <div class="header">
-        <div class="wrap">
-            <h1 class="site-title">Eshop</h1>
-        </div>
-    </div>
-</header>
 <main>
-    <div class="main">
-        <div class="wrap">
+    <div class="goods">
 
-        </div>
     </div>
 </main>
-<footer>
-    <div class="footer">
-        <div class="wrap">
+<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/eshop.js"></script>
 
-        </div>
-    </div>
-</footer>
 </body>
 </html>
